--- a/tile.css
+++ b/tile.css
@@ -1,34 +1,3 @@
-@charset "UTF-8";
-@font-face {
-  font-family: "corisanderegular";
-  src: url(https://content.vitaminshoppe.com/fonts/corisande/corisanderegular.eot);
-  src: local("☺"),
-    url(https://content.vitaminshoppe.com/fonts/corisande/corisanderegular.woff)
-      format("woff"),
-    url(https://content.vitaminshoppe.com/fonts/corisande/corisanderegular.ttf)
-      format("truetype"),
-    url(https://content.vitaminshoppe.com/fonts/corisande/corisanderegular.svg)
-      format("svg");
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: "corisandebold";
-  src: url(https://content.vitaminshoppe.com/fonts/corisandebold/corisandebold.eot);
-  src: local("☺"),
-    url(https://content.vitaminshoppe.com/fonts/corisandebold/corisandebold.woff)
-      format("woff"),
-    url(https://content.vitaminshoppe.com/fonts/corisandebold/corisandebold.ttf)
-      format("truetype"),
-    url(https://content.vitaminshoppe.com/fonts/corisandebold/corisandebold.svg)
-      format("svg");
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
 .prod--wrapper {
   display: flex;
   width: 95%;
@@ -36,18 +5,17 @@
   border: 1px solid #b6b6b6;
   border-radius: 6px;
   padding: 22px 10px;
+  font-family: "Calibri", "Arial";
 }
 
 .prod--wrapper .prod--row {
   display: flex;
   flex-direction: row;
-  /* border: 1px solid red; */
 }
 
 .prod--wrapper .prod--col {
   display: flex;
   flex-direction: column;
-  /* border: 1px solid gray; */
 }
 
 .prod--wrapper .prod--img {
@@ -60,9 +28,6 @@
   height: 100%;
   vertical-align: top;
   max-width: 100%;
-  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    height: 100%;
-  }
 }
 
 .prod--wrapper .prod--details {
@@ -72,7 +37,7 @@
 
 .prod--wrapper .prod--details .prod--name {
   margin-bottom: 3px;
-  width: 75%;
+  width: 85%;
   display: block;
   max-width: 100%;
 }
@@ -82,8 +47,7 @@
 }
 
 .prod--wrapper .prod--details .prod--name .prod--name-text {
-  font-family: corisandebold;
-  /* width: 75%; */
+  font-weight: bold;
   font-size: 16px;
   line-height: 23px;
   color: #002877;
@@ -95,169 +59,7 @@
 }
 
 .prod--wrapper .prod--details .prod--description .prod--description-text {
-  font-family: corisanderegular;
   font-size: 13px;
   line-height: 18px;
   color: #666666;
 }
-
-/* @media screen and (max-width: 1023px) {
-  .prod--wrapper
-    .prod--status-container
-    .prod--status-tracking
-    .prod--tracking {
-    width: 25%;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .prod--wrapper .prod--status-container {
-    padding-top: 48px;
-    padding-left: 15px;
-    padding-right: 15px;
-  }
-  .prod--wrapper .prod--status-container .prod--status-tracking {
-    transform: translateY(-68px);
-  }
-  .prod--wrapper .prod--status-container .prod--status-tracking .prod--status {
-    width: 15%;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--status-tracking
-    .prod--tracking {
-    width: 55%;
-  }
-  .prod--wrapper .prod--status-container .prod--grouping-tile {
-    flex-direction: column;
-  }
-  .prod--wrapper .prod--status-container .prod--grouping-tile .prod--img {
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    margin-bottom: 17px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--img
-    .prod--img-graphic {
-    width: 38%;
-  }
-  .prod--wrapper .prod--status-container .prod--grouping-tile .prod--details {
-    width: 100%;
-    margin-left: 0;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--brand {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 12px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--name {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 22px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--name
-    .prod--name-text {
-    text-align: center;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--description {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--rating-review {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 18px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--details
-    .prod--auto-delivery {
-    justify-content: center;
-    margin-bottom: 17px;
-  }
-  .prod--wrapper .prod--status-container .prod--grouping-tile .prod--qty-price {
-    width: 100%;
-    margin-left: 0;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--qty-price
-    .prod--qty {
-    display: none;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--qty-price
-    .prod--price {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 21px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--qty-price
-    .prod--warning-message {
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 18px;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--cta-disclaimer {
-    width: 100%;
-    margin-left: 0;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--cta-disclaimer
-    .prod--cta {
-    width: 100%;
-    justify-content: center;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--cta-disclaimer
-    .prod--disclaimer {
-    width: 100%;
-    justify-content: center;
-  }
-  .prod--wrapper
-    .prod--status-container
-    .prod--grouping-tile
-    .prod--cta-disclaimer
-    .prod--disclaimer
-    .prod--disclaimer-text {
-    width: 149px;
-  }
-} */
