--- a/loader.css
+++ b/loader.css
@@ -1,19 +1,46 @@
-.skeleton-loader:empty {
+.skeleton-loader-background {
   width: 100%;
   height: 15px;
-  /* height: inherit; */
   display: block;
-  background-image: linear-gradient(
-      100deg,
+  background: lightgray;
+  /* background-image: linear-gradient(lightgray 100%, transparent 0); */
+  /* background-repeat: repeat-y; */
+  /* background-size: 100% 200px; */
+  /* background-position: 0 0; */
+}
+.skeleton-loader-gradient {
+  width: 100%;
+  height: 15px;
+  display: block;
+  background: linear-gradient(
+      to right,
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0.5) 50%,
       rgba(255, 255, 255, 0) 80%
     ),
     linear-gradient(lightgray 100%, transparent 0);
   background-repeat: repeat-y;
-  background-size: 50px 200px, /* highlight */ 100% 200px;
-  background-position: 0 0, /* highlight */ 0 0;
-  animation: shine 3.5s infinite;
+  background-size: 50px 200px, 100% 200px;
+  background-position: 0 0, 0 0;
+}
+.skeleton-loader:empty {
+  width: 100%;
+  /* height: 100%; */
+  height: 15px;
+  /* height: inherit; */
+  display: block;
+  background: linear-gradient(
+      to right,
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0) 80%
+    ),
+    lightgray;
+  background-repeat: repeat-y;
+  background-size: 50px 500px;
+  background-position: 0 0;
+  animation: shine 1.5s infinite;
+  left: -150px;
 }
 
 @keyframes shine {
